--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,26 +1,52 @@
 <h1>Dashboard#show</h1>
 <p>Find me in app/views/dashboard/show.html.erb</p>
 
-
-
 <h1>Welcome to your Dashboard, <%= current_user.first_name %>!</h1>
-
 
 <h2>Your family : <%= current_user.family ? current_user.family.name : link_to("Create your family", new_family_path) %></h2>
 
 <% if current_user.family %>
 <h3>members :</h3>
 
-
 <%@members.each do |member|%>
-<div><%=member.first_name%></div>
+<div><%=member%></div>
 <%end%>
 
-<h2>Send an invitation</h2>
+<h3>Children:</h3>
+
+<% if @children.any? %>
+  <ul>
+    <% @children.each do |child| %>
+      <li>
+        <strong><%= child.first_name %> <%= child.last_name %></strong>, born on <%= child.birth_date %> <br>
+
+
+
+          <%= link_to "Edit", edit_child_path(child), class: "btn btn-sm btn-primary" %>
+          <%= link_to "Delete", child_path(child), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-sm btn-danger" %>
+
+
+          <%= link_to "Guard", new_child_guard_path(child), class: "btn btn-sm btn-info" %>
+          <%= link_to "Event", new_child_event_path(child), class: "btn btn-sm btn-warning" %>
+          <%= link_to "Expenses", new_child_expense_path(child), class: "btn btn-sm btn-success" %>
+      </li>
+
+    <% end %>
+  </ul>
+<% else %>
+  <p>No children added yet.</p>
+<% end %>
+
+<%= link_to "Add a Child", new_family_child_path(current_user.family), class: "btn btn-secondary" %>
+
+
+<h3>Send an invitation</h3>
 
 <%= render 'invitations/form'%>
+<%end%>
 
-<h2>Invitations</h2>
+
+<h3>Invitations</h3>
 
 <% @invitations.each do |invitation| %>
   <div>
@@ -46,8 +72,7 @@
 
     <% if invitation.status == 'pending' %>
       <%= button_to 'Accept',  accept_invitation_path(invitation), method: :patch , data: {confirm: "Are you sure ? "}%>
-      <%= link_to 'Reject',  reject_invitation_path(invitation), method: :patch %>
+      <%= button_to 'Reject',  reject_invitation_path(invitation), method: :patch %>
     <% end %>
   </div>
 <% end %>
-<%end%>
