--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -1,9 +1,10 @@
 <h1>Edit Child</h1>
 
-<%= simple_form_for @child do |form| %>
+<%= simple_form_for [@family, @child] do |form| %>
   <%= form.input :first_name, label: "First Name" %>
   <%= form.input :last_name, label: "Last Name" %>
   <%= form.input :birth_date, as: :date, label: "Birth Date" %>
-
   <%= form.button :submit, "Update Child" %>
 <% end %>
+
+<%= link_to 'Cancel', dashboard_path, class: "btn btn-secondary" %>
