--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -2,5 +2,5 @@
 <p>Birth Date: <%= @child.birth_date %></p>
 
 <%= link_to 'Edit', edit_child_path(@child), class: "btn btn-primary" %> |
-<%= link_to 'Delete', child_path(@child), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %> |
+<%= link_to 'Delete', child_path(@child), data: { "turbo-method": :delete, confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
 <%= link_to 'Back to Family', family_path(@child.family), class: "btn btn-secondary" %>
