--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -23,7 +23,7 @@
 
 
           <%= link_to "Edit", edit_child_path(child), class: "btn btn-sm btn-primary" %>
-          <%= link_to "Delete", child_path(child), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-sm btn-danger" %>
+          <%= link_to 'Delete', child_path(child), data: { "turbo-method": :delete, confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
 
 
           <%= link_to "Guard", new_child_guard_path(child), class: "btn btn-sm btn-info" %>
