--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for [@child, @expense] do |f| %>
-  <%= f.input :amount, label: "Amount", placeholder: "Enter the amount" %>
-  <%= f.input :description, label: "Description", placeholder: "Enter the description" %>
-  <%= f.input :date, label: "Date" %>
-  <%= f.button :submit, "Create Expense", class: "btn btn-primary" %>
-  <%= f.button :submit, "Cancel", class: "btn btn-secondary" %>
+  <%= f.input :amount, label: "Amount", placeholder: "Enter the amount", required: true%>
+  <%= f.input :description, label: "Description", placeholder: "Enter the description", required: true%>
+  <%= f.input :date, label: "Date", required: true, :end_year => 2024 %>
+  <%= f.input :user_id, label: "Payer", as: :select, collection: current_user.family.users.map { |user| ["#{user.first_name} #{user.last_name}", user.id] }, required: true %>
+  <%= f.button :submit,  (action_name == 'edit' ? 'Update Expense' : 'Create Expense'), class: "btn btn-primary" %>
 <% end %>
