fix guard calendar

--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -6,8 +6,10 @@
     background-color: #faf3dd;
   }
   .highlight-day {
-    background-color: yellow;
-    font-weight: bold;
+    color: white;
+    padding: 8px 24px;
+    border-radius: 4px;
+    background: #1edd88;
   }
 }
 
