--- a/app/views/guards/new.html.erb
+++ b/app/views/guards/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Guard</h1>
 
-<h1>New Guard</h1>
+<h2>One week pattern</h2>
 
 <%= simple_form_for([@child, @guard]) do |f| %>
   <div class="form-group">
