--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,18 @@
 // Define variables for your color scheme
 
+$ultra-light-green: #d8efd3;
+$light-green: #95d2b3;
+$green: #55ad9b;
+$dark-green: #10705d;
+$white: #f5f5f5;
+$light-black: #4a4a4a;
+$gray: #afacac;
+
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$red: #fd1015;
+// $blue: #0d6efd;
+// $yellow: #ffc65a;
+$orange: #e67e22;
+// $green: #1edd88;
+// $gray: #0e0000;
+// $light-gray: #f4f4f4;
