--- a/app/views/guards/new.html.erb
+++ b/app/views/guards/new.html.erb
@@ -35,6 +35,6 @@
   <%= f.hidden_field :user_id, value: current_user.id %>
 
   <div class="form-group">
-    <%= f.submit "Create Guard", class: "btn btn-primary" %>
+    <%= f.submit "Create Guard", class: "btn btn-flat" %>
   </div>
 <% end %>
