--- a/app/views/invitations/_form.html.erb
+++ b/app/views/invitations/_form.html.erb
@@ -3,5 +3,5 @@
     <%= f.input :recipient_email, label: "Send an invitation to the following email address :" %>
   </div>
 
-  <%= f.submit "Send", class: "btn btn-primary" %>
+  <%= f.submit "Send", class: "btn btn-flat" %>
 <% end %>
