--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,6 @@
 @import "components/index";
 @import "pages/index";
 
-body {
-  margin: 10px 50px;
-  background-color: white;
+.col-3 {
+  border-right: 1px solid #ccc;
 }
