--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,4 +1,7 @@
-<h1>Upload Document</h1>
+<h1>Add a New Document</h1>
+
+<%= link_to "Back to Documents", documents_path, class: "btn btn-secondary" %>
+
 
 <div id="dropzone" class="dropzone">
   <p>Drag and drop files here, or click to upload.</p>
