--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -19,13 +19,9 @@
     <% @children.each do |child| %>
       <li>
         <strong><%= child.first_name %> <%= child.last_name %></strong>, born on <%= child.birth_date %> <br>
-
-
-
           <%= link_to "Edit", edit_child_path(child), class: "btn btn-sm btn-primary" %>
           <%= link_to 'Delete', child_path(child), data: { "turbo-method": :delete, confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
-
-
+          <%= link_to "Go to Documents", documents_path, class: "btn btn-primary", style: "margin-top: 10px;" %>
           <%= link_to "Guard", new_child_guard_path(child), class: "btn btn-sm btn-info" %>
           <%= link_to "Event", new_child_event_path(child), class: "btn btn-sm btn-warning" %>
           <%= link_to "Expenses", new_child_expense_path(child), class: "btn btn-sm btn-success" %>
