--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,23 @@
 @import "components/index";
 @import "pages/index";
 
+
+body {
+  background-color: white;
+}
+
+.container{
+  margin: 0px 30px;
+}
+
+.word-highlight {
+  color: $green;
+}
+
 .col-3 {
   border-right: 1px solid #ccc;
+}
+
+.main-title {
+  font-size: 70px;
 }
