--- a/app/assets/stylesheets/components/_btn_flat.scss
+++ b/app/assets/stylesheets/components/_btn_flat.scss
@@ -1,9 +1,11 @@
 .btn-flat {
   color: $white;
-  padding: 8px 24px;
-  border-radius: 50px;
+  padding: 15px 24px;
+  width:40px;
+  border-radius: 10px;
   background: $green;
   transition: background 0.3s ease;
+  text-decoration: none;
 }
 
 .btn-flat:hover {
