--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -2,13 +2,15 @@
   <h1>Expenses for <%= @child.first_name %></h1>
   <h2>Total expenses : <%= @child.expenses.sum(:amount) %> €</h2>
   <h3><% @expenses.group_by(&:user).each do |user, expenses| %>
-      <p><strong><%= user.first_name %> </strong>: <%= expenses.sum(&:amount) %> €</p>
-    <% end %></h3>
+      <strong><%= user.first_name %></strong>: <%= expenses.sum(&:amount) %> €
+      </p>
+    <% end %>
   <%= link_to 'Add an expense', new_child_expense_path, class: 'btn btn-primary' %>
   <%= link_to 'Pay', pay_child_expenses_path, data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-danger"%>
 
 <%# list of expenses %>
  <% @expenses.each do |expense| %>
+
     <div class="card d-flex flex-row align-items-center my-3">
       <div class="card-body flex-grow-1">
         <div class="d-flex justify-content-between align-items-center">
@@ -17,7 +19,7 @@
           </div>
           <div class="expense-description">
             <p class="mb-1"><strong>Description:</strong> <%= expense.description %></p>
-            <p class="mb-1"><strong>Payer:</strong> <%= expense.user.first_name %></p>
+            <p class="mb-1"><strong>Payer:</strong> <%= expense.user.first_name %>
           </div>
           <div class="expense-amount">
             <p class="mb-0"><strong>Amount:</strong> <%= number_to_currency(expense.amount, unit: "€", format: "%n %u") %></p>
@@ -30,6 +32,7 @@
           </div>
         </div>
       </div>
+      <%= link_to '', expense_path(expense), class: 'card-link'  %>
     </div>
   <% end %>
 </div>
