on a fait ce qu'on pouvait avec ce calendar

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -73,3 +73,9 @@
     <% end %>
   </div>
 <% end %>
+
+<!-- Calendar container with Stimulus controller -->
+<div id="calendar-container" data-controller="calendar" data-action="click->calendar#redirectToCalendar">
+  <%= render 'shared/calendar' %>
+</div>
+
