--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Co-parenting Connect</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Welcome to Co-parenting Connect</h1>
+<p>Manage your co-parenting appointments easily.</p>
+
