--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -5,18 +5,12 @@
 <div class="container">
   <div class="row">
     <div class="col-3">
-
       <% if current_user.family %>
       <h3>Members :</h3>
       <%@members.each do |member|%>
-      <p><%=member%></P>
+      <p><%=member%></p>
       <%end%>
-      <%current_user.family.family_members.each do |member|%>
-        <p><%=member.is_parent%></P>
-      <%end%>
- <p><%= link_to "Add a Child", new_family_child_path(current_user.family), class: "btn btn-flat" %></p>
       <h3>Children:</h3>
-
       <% if @children.any? %>
         <ul>
           <% @children.each do |child| %>
@@ -33,15 +27,21 @@
       <% else %>
         <p>No children added yet.</p>
       <% end %>
-
+      <p><%= link_to "Add a Child", new_family_child_path(current_user.family), class: "btn btn-flat" %></p>
       <h3>Send an invitation</h3>
       <p><%= render 'invitations/form'%></p>
       <%end%>
       <h3>Invitations</h3>
-
-
-
-
+      <% @invitations.each do |invitation| %>
+        <div>
+          <p>Invitations sent from: <%= invitation.family.name %></p>
+          <p>to <%=invitation.recipient.email%></p>
+          <p>Status: <%= invitation.status %></p>
+          <% if invitation.status == 'pending' %>
+            <%= button_to 'cancel', cancel_invitation_path(invitation), method: :delete %>
+          <% end %>
+        </div>
+      <% end %>
       <% @invits.each do |invitation| %>
         <div>
           <p>Invitations received from: <%= invitation.family.name %></p>
@@ -56,17 +56,9 @@
       <% end %>
     </div>
     <div class="col-9">
-   
+    <%= month_calendar do |date| %>
+    <%= date %>
+    <% end %>
     </div>
   </div>
-
-<% end %>
-
-<!-- Calendar container with Stimulus controller -->
-<div id="calendar-container" data-controller="calendar" data-action="click->calendar#redirectToCalendar">
-  <%= render 'shared/calendar' %>
 </div>
-
-
-</div>
-
